--- a/src/main/java/org/olat/course/condition/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/condition/_i18n/LocalStrings_zh_CN.properties
@@ -1,98 +1,99 @@
 #Fri May 07 05:15:37 CEST 2010
-apply=\u5E94\u7528
-choose=\u9009\u62E9
-command.activate.easyMode=\u663E\u793A\u7B80\u5355\u6A21\u5F0F
-command.activate.expertMode=\u663E\u793A\u4E13\u5BB6\u6A21\u5F0F 
-create=\u521B\u5EFA
-create.group=\u521B\u5EFA\u7FA4\u7EC4
-easy.operator=\u64CD\u4F5C\u8005
-easy.value=\u91CD\u8981\u6027
-error.argtype.areanameexpected=\u51FD\u6570 "{0}" \u5FC5\u987B\u662F\u5B66\u4E60\u8D44\u6E90\u7684\u4E00\u90E8\u5206.
-error.argtype.attributename=\u51FD\u6570 "{0}" \u5FC5\u987B\u6709\u4E00\u4E2A\u5C5E\u6027\u540D.
-error.argtype.attribvalue=\u51FD\u6570 "{0}" \u5FC5\u987B\u6709\u4E00\u4E2A\u5339\u914D\u7684\u5C5E\u6027\u503C.
-error.argtype.coursnodeidexpeted=\u51FD\u6570"{0}"\u5FC5\u987B\u5305\u542B\u8BFE\u7A0B\u5143\u7D20ID.
-error.argtype.date=\u51FD\u6570 "{0}"\u5FC5\u987B\u7ED9\u5B9A\u4E00\u4E2A\u65F6\u95F4,\u5B9A\u4E49\u5982\: "dd.mm.YYYY HH\:mm". \u8F93\u5165\u7684{1} \u683C\u5F0F\u4E0D\u5339\u914D.
-error.argtype.institutionalname="{0}"\u4E2D\u4E00\u5B9A\u8981\u5305\u62EC\u673A\u6784\u7684\u540D\u79F0
-error.argtype.username=\u51FD\u6570 "{0}" \u5FC5\u987B\u5305\u542B\u4E00\u4E2A\u7528\u6237\u540D.
-error.fewerargs="{0}" \u51FD\u6570\u7684\u53C2\u6570\u4E2A\u6570\u5C11\u4E8E\u6307\u5B9A\u4E2A\u6570.
-error.fix=\u521B\u5EFA
-error.illegal.operation.at=\u4E0D\u5141\u8BB8\u5728\u4F4D\u7F6E {0}\u7684\u64CD\u4F5C, \u67E5\u770B\u5E2E\u52A9\u5F97\u5230\u53EF\u884C\u7684\u64CD\u4F5C. 
-error.inexpression.at=\u5728\u4F4D\u7F6E {0}\u8BE5\u6761\u4EF6\u8868\u8FBE\u5F0F\u6709\u4E00\u4E2A\u9519\u8BEF.
-error.moreargs="{0}"\u51FD\u6570\u9700\u8981\u66F4\u591A\u7684\u53C2\u6570\u624D\u80FD\u6B63\u5E38\u8FD0\u884C. 
-error.notassessable.coursenodid=\u8BE5\u8BFE\u7A0B\u5143\u7D20ID ({1})\u6CA1\u6709\u6307\u5411\u4E00\u4E2A\u53EF\u8BBF\u95EE\u7684\u8BFE\u7A0B\u5143\u7D20.
-error.notassessable.coursenodid.publish=\u8BE5\u8BFE\u7A0B\u5143\u7D20 ({1})\u5DF2\u7ECF\u6709\u4E00\u4E2A\u4E0D\u53EF\u8BBF\u95EE\u7684\u5143\u7D20\u7684\u65E0\u6548\u5F15\u7528. \u53D1\u5E03\u8FD9\u4E2A\u5143\u7D20\u5C06\u4F1A\u6709\u5F02\u5E38\u7ED3\u679C\!
-error.notenrollment.coursenodeid=\u8FD9\u4E2A\u7279\u6B8A\u7684\u8BFE\u7A0B\u5143\u7D20ID ({1})\u6CA1\u6709\u76F8\u5339\u914D\u7684\u8BFE\u7A0B\u5143\u7D20.
-error.notfound.coursenodeid=\u5728\u8BE5\u8BFE\u7A0B\u91CC\u672A\u627E\u5230\u6307\u5B9A\u7684\u8BFE\u7A0B\u5143\u7D20ID ({1})
-error.notfound.coursenodeid.publish=\u8BE5\u5143\u7D20\u4F9D\u8D56\u4E8E\u8BFE\u7A0B\u5143\u7D20{1}. \u4ED6\u4EEC\u53EA\u80FD\u4E00\u8D77\u53D1\u5E03. 
-error.notfound.name=\u5728\u8BE5\u8BFE\u7A0B\u7684\u7EC4\u7BA1\u7406\u4E2D\u672A\u627E\u5230\u6307\u5B9A\u7684\u540D\u79F0({1}).
-error.notfound.name.publish=\u8BE5\u5143\u7D20\u5F15\u7528\u4E86\u4E00\u4E2A\u4E0D\u5B58\u5728\u7684\u7EC4\u6216\u533A\u57DF. \u56E0\u6B64\u8BE5\u60C5\u51B5\u4E0D\u80FD\u6B63\u5E38\u8FD0\u884C
-error.notfound.names=\u5728\u672C\u5B66\u7A0B\u7FA4\u7EC4\u7BA1\u7406\u4E2D\u65E0\u6CD5\u627E\u5230\u6307\u5B9A\u7684\u540D\u79F0({1})\u3002
-error.undefined.function.at=\u4F4D\u7F6E {0}\u7684\u672A\u77E5\u529F\u80FD, \u67E5\u770B\u5E2E\u52A9\u5F97\u5230\u53EF\u884C\u7684\u64CD\u4F5C. 
-error.undefined.unit.at=\u4F4D\u7F6E {0}\u7684\u672A\u77E5\u5355\u5143, \u67E5\u770B\u5E2E\u52A9\u5F97\u5230\u53EF\u884C\u7684\u5355\u5143. 
-error.undefined.variable.at=\u4F4D\u7F6E {0}\u7684\u672A\u77E5\u53D8\u91CF, \u67E5\u770B\u5E2E\u52A9\u5F97\u5230\u53EF\u884C\u7684\u53D8\u91CF.
-form.easy.applyRulesForCoach=\u5C06\u4EE5\u4E0A\u89C4\u5219\u5E94\u7528\u4E8E\u8F85\u5BFC\u6559\u5E08
-form.easy.area=\u9009\u62E9\u5B66\u4E60\u533A\u57DF
-form.easy.assessmentSwitch=\u8BC4\u4F30\u9650\u5B9A
+form.easy.assessmentMode=\u4ec5\u5728\u8bc4\u4f30\u6a21\u5f0f\u4e0b
+apply=\u5e94\u7528
+choose=\u9009\u62e9
+command.activate.easyMode=\u663e\u793a\u7b80\u5355\u6a21\u5f0f
+command.activate.expertMode=\u663e\u793a\u4e13\u5bb6\u6a21\u5f0f 
+create=\u521b\u5efa
+create.group=\u521b\u5efa\u7fa4\u7ec4
+easy.operator=\u64cd\u4f5c\u8005
+easy.value=\u91cd\u8981\u6027
+error.argtype.areanameexpected=\u51fd\u6570 "{0}" \u5fc5\u987b\u662f\u5b66\u4e60\u8d44\u6e90\u7684\u4e00\u90e8\u5206.
+error.argtype.attributename=\u51fd\u6570 "{0}" \u5fc5\u987b\u6709\u4e00\u4e2a\u5c5e\u6027\u540d.
+error.argtype.attribvalue=\u51fd\u6570 "{0}" \u5fc5\u987b\u6709\u4e00\u4e2a\u5339\u914d\u7684\u5c5e\u6027\u503c.
+error.argtype.coursnodeidexpeted=\u51fd\u6570"{0}"\u5fc5\u987b\u5305\u542b\u8bfe\u7a0b\u5143\u7d20ID.
+error.argtype.date=\u51fd\u6570 "{0}"\u5fc5\u987b\u7ed9\u5b9a\u4e00\u4e2a\u65f6\u95f4,\u5b9a\u4e49\u5982\: "dd.mm.YYYY HH\:mm". \u8f93\u5165\u7684{1} \u683c\u5f0f\u4e0d\u5339\u914d.
+error.argtype.institutionalname="{0}"\u4e2d\u4e00\u5b9a\u8981\u5305\u62ec\u673a\u6784\u7684\u540d\u79f0
+error.argtype.username=\u51fd\u6570 "{0}" \u5fc5\u987b\u5305\u542b\u4e00\u4e2a\u7528\u6237\u540d.
+error.fewerargs="{0}" \u51fd\u6570\u7684\u53c2\u6570\u4e2a\u6570\u5c11\u4e8e\u6307\u5b9a\u4e2a\u6570.
+error.fix=\u521b\u5efa
+error.illegal.operation.at=\u4e0d\u5141\u8bb8\u5728\u4f4d\u7f6e {0}\u7684\u64cd\u4f5c, \u67e5\u770b\u5e2e\u52a9\u5f97\u5230\u53ef\u884c\u7684\u64cd\u4f5c. 
+error.inexpression.at=\u5728\u4f4d\u7f6e {0}\u8be5\u6761\u4ef6\u8868\u8fbe\u5f0f\u6709\u4e00\u4e2a\u9519\u8bef.
+error.moreargs="{0}"\u51fd\u6570\u9700\u8981\u66f4\u591a\u7684\u53c2\u6570\u624d\u80fd\u6b63\u5e38\u8fd0\u884c. 
+error.notassessable.coursenodid=\u8be5\u8bfe\u7a0b\u5143\u7d20ID ({1})\u6ca1\u6709\u6307\u5411\u4e00\u4e2a\u53ef\u8bbf\u95ee\u7684\u8bfe\u7a0b\u5143\u7d20.
+error.notassessable.coursenodid.publish=\u8be5\u8bfe\u7a0b\u5143\u7d20 ({1})\u5df2\u7ecf\u6709\u4e00\u4e2a\u4e0d\u53ef\u8bbf\u95ee\u7684\u5143\u7d20\u7684\u65e0\u6548\u5f15\u7528. \u53d1\u5e03\u8fd9\u4e2a\u5143\u7d20\u5c06\u4f1a\u6709\u5f02\u5e38\u7ed3\u679c\!
+error.notenrollment.coursenodeid=\u8fd9\u4e2a\u7279\u6b8a\u7684\u8bfe\u7a0b\u5143\u7d20ID ({1})\u6ca1\u6709\u76f8\u5339\u914d\u7684\u8bfe\u7a0b\u5143\u7d20.
+error.notfound.coursenodeid=\u5728\u8be5\u8bfe\u7a0b\u91cc\u672a\u627e\u5230\u6307\u5b9a\u7684\u8bfe\u7a0b\u5143\u7d20ID ({1})
+error.notfound.coursenodeid.publish=\u8be5\u5143\u7d20\u4f9d\u8d56\u4e8e\u8bfe\u7a0b\u5143\u7d20{1}. \u4ed6\u4eec\u53ea\u80fd\u4e00\u8d77\u53d1\u5e03. 
+error.notfound.name=\u5728\u8be5\u8bfe\u7a0b\u7684\u7ec4\u7ba1\u7406\u4e2d\u672a\u627e\u5230\u6307\u5b9a\u7684\u540d\u79f0({1}).
+error.notfound.name.publish=\u8be5\u5143\u7d20\u5f15\u7528\u4e86\u4e00\u4e2a\u4e0d\u5b58\u5728\u7684\u7ec4\u6216\u533a\u57df. \u56e0\u6b64\u8be5\u60c5\u51b5\u4e0d\u80fd\u6b63\u5e38\u8fd0\u884c
+error.notfound.names=\u5728\u672c\u5b66\u7a0b\u7fa4\u7ec4\u7ba1\u7406\u4e2d\u65e0\u6cd5\u627e\u5230\u6307\u5b9a\u7684\u540d\u79f0({1})\u3002
+error.undefined.function.at=\u4f4d\u7f6e {0}\u7684\u672a\u77e5\u529f\u80fd, \u67e5\u770b\u5e2e\u52a9\u5f97\u5230\u53ef\u884c\u7684\u64cd\u4f5c. 
+error.undefined.unit.at=\u4f4d\u7f6e {0}\u7684\u672a\u77e5\u5355\u5143, \u67e5\u770b\u5e2e\u52a9\u5f97\u5230\u53ef\u884c\u7684\u5355\u5143. 
+error.undefined.variable.at=\u4f4d\u7f6e {0}\u7684\u672a\u77e5\u53d8\u91cf, \u67e5\u770b\u5e2e\u52a9\u5f97\u5230\u53ef\u884c\u7684\u53d8\u91cf.
+form.easy.applyRulesForCoach=\u5c06\u4ee5\u4e0a\u89c4\u5219\u5e94\u7528\u4e8e\u8f85\u5bfc\u6559\u5e08
+form.easy.area=\u9009\u62e9\u5b66\u4e60\u533a\u57df
+form.easy.assessmentSwitch=\u8bc4\u4f30\u9650\u5b9a
 form.easy.assessmentSwitch.no=\u5426
-form.easy.assessmentSwitch.passed=\u68C0\u9A8C "\u5DF2\u901A\u8FC7"
-form.easy.assessmentSwitch.score=\u68C0\u9A8C\u5206\u6570
-form.easy.assessmentSwitch.type=\u91CD\u8981\u6027\u68C0\u9A8C
-form.easy.attributeSwitch=\u5C5E\u6027\u4F9D\u8D56
-form.easy.attributebconnector=\u76F8\u5173\u7684\u89C4\u5219\uFF1A
-form.easy.attributebconnector.and=\u548C
+form.easy.assessmentSwitch.passed=\u68c0\u9a8c "\u5df2\u901a\u8fc7"
+form.easy.assessmentSwitch.score=\u68c0\u9a8c\u5206\u6570
+form.easy.assessmentSwitch.type=\u91cd\u8981\u6027\u68c0\u9a8c
+form.easy.attributeSwitch=\u5c5e\u6027\u4f9d\u8d56
+form.easy.attributebconnector=\u76f8\u5173\u7684\u89c4\u5219\uff1a
+form.easy.attributebconnector.and=\u548c
 form.easy.attributebconnector.or=\u6216
-form.easy.bdate=\u5F00\u59CB
-form.easy.coachExclusive=\u963B\u6B62\u5B66\u751F
-form.easy.cutValue=\u5206\u6570\u7EBF
-form.easy.dateSwitch=\u65F6\u95F4\u9650\u5B9A
-form.easy.edate=\u7ED3\u675F
-form.easy.error.attribute="\u91CD\u8981\u6027"\u4E0D\u80FD\u4E3A\u7A7A\uFF01
-form.easy.error.bdate=\u9519\u8BEF\u7684\u65E5\u671F\u683C\u5F0F
-form.easy.error.bdateafteredate=\u5F00\u59CB\u65E5\u671F\u5FC5\u987B\u4E0D\u5F97\u665A\u4E8E\u7ED3\u675F\u65E5\u671F. \u5982\u679C\u4F60\u60F3\u8FD9\u6837\u505A,\u8BF7\u4F7F\u7528\u4E13\u5BB6\u6A21\u5F0F. 
-form.easy.error.cutValue=\u5206\u6570\u7EBF\u5FC5\u987B\u662F\u6574\u6570
-form.easy.error.date=\u5982\u679C\u5C06\u8BFE\u7A0B\u8BBE\u7F6E\u4E3A\u5B9A\u65F6\u5F00\u653E, \u9700\u8981\u6307\u5B9A\u5F00\u59CB\u65E5\u671F\u548C\u7ED3\u675F\u65E5\u671F.
-form.easy.error.edate=\u9519\u8BEF\u7684\u65E5\u671F\u683C\u5F0F
-form.easy.error.group=\u81F3\u5C11\u8981\u6307\u660E\u4E00\u4E2A\u5B66\u4E60\u7EC4\u6216\u5B66\u4E60\u533A\u57DF. 
-form.easy.error.nodeDeleted=\u8BE5\u8BFE\u7A0B\u5143\u7D20\u5DF2\u5220\u9664,  \u4E0D\u80FD\u518D\u9009\u62E9, \u8BF7\u9009\u62E9\u53E6\u4E00\u4E2A.
-form.easy.error.nodePassed=\u5FC5\u987B\u9009\u62E9\u4E00\u4E2A\u53EF\u8BBF\u95EE\u7684\u8BFE\u7A0B\u5143\u7D20, \u624D\u80FD\u68C0\u9A8C "\u5DF2\u901A\u8FC7"\u6216\u5177\u4F53\u5206\u6570.
-form.easy.error.setattribute.failed=\u67D0\u4E9B\u7279\u5B9A\u7684\u5C5E\u6027\u89C4\u5219\u4E0D\u80FD\u5B89\u88C5\u3002\u8BF7\u624B\u52A8\u68C0\u67E5\u8FD9\u4E9B\u89C4\u5219\u3002
-form.easy.example.area=(\u6CE8\u518C, \u7EC4 I, \u7EC4 II)
-form.easy.example.bdate=\uFF08\u4F8B\u5982\uFF1A26.06.2007 10\:28\uFF09
-form.easy.example.edate=(\u4F8B\u5982\uFF1A26.06.2007 16\:55)
-form.easy.example.group=(\u7EA2\u7EC4, \u7EFF\u7EC4, \u84DD\u7EC4)
-form.easy.extCondConn=\u5E03\u5C14\u578B\u63A5\u53E3
-form.easy.extCondConn.and=\u548C
+form.easy.bdate=\u5f00\u59cb
+form.easy.coachExclusive=\u963b\u6b62\u5b66\u751f
+form.easy.cutValue=\u5206\u6570\u7ebf
+form.easy.dateSwitch=\u65f6\u95f4\u9650\u5b9a
+form.easy.edate=\u7ed3\u675f
+form.easy.error.attribute="\u91cd\u8981\u6027"\u4e0d\u80fd\u4e3a\u7a7a\uff01
+form.easy.error.bdate=\u9519\u8bef\u7684\u65e5\u671f\u683c\u5f0f
+form.easy.error.bdateafteredate=\u5f00\u59cb\u65e5\u671f\u5fc5\u987b\u4e0d\u5f97\u665a\u4e8e\u7ed3\u675f\u65e5\u671f. \u5982\u679c\u4f60\u60f3\u8fd9\u6837\u505a,\u8bf7\u4f7f\u7528\u4e13\u5bb6\u6a21\u5f0f. 
+form.easy.error.cutValue=\u5206\u6570\u7ebf\u5fc5\u987b\u662f\u6574\u6570
+form.easy.error.date=\u5982\u679c\u5c06\u8bfe\u7a0b\u8bbe\u7f6e\u4e3a\u5b9a\u65f6\u5f00\u653e, \u9700\u8981\u6307\u5b9a\u5f00\u59cb\u65e5\u671f\u548c\u7ed3\u675f\u65e5\u671f.
+form.easy.error.edate=\u9519\u8bef\u7684\u65e5\u671f\u683c\u5f0f
+form.easy.error.group=\u81f3\u5c11\u8981\u6307\u660e\u4e00\u4e2a\u5b66\u4e60\u7ec4\u6216\u5b66\u4e60\u533a\u57df. 
+form.easy.error.nodeDeleted=\u8be5\u8bfe\u7a0b\u5143\u7d20\u5df2\u5220\u9664,  \u4e0d\u80fd\u518d\u9009\u62e9, \u8bf7\u9009\u62e9\u53e6\u4e00\u4e2a.
+form.easy.error.nodePassed=\u5fc5\u987b\u9009\u62e9\u4e00\u4e2a\u53ef\u8bbf\u95ee\u7684\u8bfe\u7a0b\u5143\u7d20, \u624d\u80fd\u68c0\u9a8c "\u5df2\u901a\u8fc7"\u6216\u5177\u4f53\u5206\u6570.
+form.easy.error.setattribute.failed=\u67d0\u4e9b\u7279\u5b9a\u7684\u5c5e\u6027\u89c4\u5219\u4e0d\u80fd\u5b89\u88c5\u3002\u8bf7\u624b\u52a8\u68c0\u67e5\u8fd9\u4e9b\u89c4\u5219\u3002
+form.easy.example.area=(\u6ce8\u518c, \u7ec4 I, \u7ec4 II)
+form.easy.example.bdate=\uff08\u4f8b\u5982\uff1a26.06.2007 10\:28\uff09
+form.easy.example.edate=(\u4f8b\u5982\uff1a26.06.2007 16\:55)
+form.easy.example.group=(\u7ea2\u7ec4, \u7eff\u7ec4, \u84dd\u7ec4)
+form.easy.extCondConn=\u5e03\u5c14\u578b\u63a5\u53e3
+form.easy.extCondConn.and=\u548c
 form.easy.extCondConn.or=\u6216
-form.easy.group=\u9009\u62E9\u5B66\u4E60\u7EC4
-form.easy.groupSwitch=\u7FA4\u7EC4\u9650\u5B9A
-form.easy.nodePassed=\u8BFE\u7A0B\u5143\u7D20
-form.easy.nodePassed.deletedNode=\u8BFE\u7A0B\u5143\u7D20\u5DF2\u5220\u9664, \u8BF7\u4FEE\u6539.
-form.easy.nodePassed.noNodes=\u4E0D\u53EF\u884C, \u65E0\u8BFE\u7A0B\u5143\u7D20\u53EF\u4EE5\u8BBF\u95EE
-form.easy.nodePassed.select=\u8BF7\u9009\u62E9
-form.expert.condition=\u4E13\u5BB6\u89C4\u5219
-form.expert.error.condition=\u5206\u6790\u9519\u8BEF, \u65E0\u6548\u7684\u5148\u51B3\u6761\u4EF6
-institution.attribute=\u5C5E\u6027
-institution.attributes.hint=\u8BF7\u68C0\u67E5\u8FD9\u4E9B\u5C5E\u6027\u662F\u5426\u5BF9\u60A8\u7684\u5927\u5B66\u6709\u6548\u3002
-mode=\u6A21\u5F0F
-mode.easy=\u7B80\u5355
-mode.expert=\u4E13\u5BB6
-popupchooseareas=\u4ECE\u7FA4\u7EC4\u7BA1\u7406\u4E2D\u9009\u62E9\u5B66\u4E60\u533A\u57DF
-popupchoosegroups=\u4ECE\u7FA4\u7EC4\u7BA1\u7406\u4E2D\u9009\u62E9\u7EC4
-solution.checkgroupmanagement=\u63D0\u793A\: \u5728\u7EC4\u7BA1\u7406\u91CC\u9762\u521B\u5EFA\u4E00\u4E2A\u7EC4.
-solution.chooseenrollment=\u63D0\u793A\: \u590D\u5236\u8BE5"\u767B\u8BB0"\u8BFE\u7A0B\u5143\u7D20ID. \u5982\u679C\u4E0D\u5B58\u5728,\u8BF7\u6DFB\u52A0\u4E00\u4E2A.
-solution.copypastenodeid=\u63D0\u793A\: \u4ECE\u5143\u7D20\u7684"\u8BF4\u660E"\u6807\u7B7E\u4E2D\u590D\u5236\u8BFE\u7A0B\u5143\u7D20ID.
-solution.error.inexpression=\u63D0\u793A\: \u68C0\u9A8C ( ) \u548C " "\u5F00/\u5173\u987A\u5E8F\u7684\u6B63\u786E\u6027 .
-solution.error.undefvariable=\u63D0\u793A\: \u68C0\u9A8C\u4F4D\u7F6E {0} \u4E0A\u7684\u5728" "\u4E2D\u7684\u53EF\u80FD\u53C2\u6570.
-solution.example.date.infunction=\u4F8B\u5982\: {0}("13.10.2005 18\:25")
-solution.example.institutionalname.infunction=\u63D0\u793A\uFF1A\u8BF7\u7528\u53CC\u5F15\u53F7 " " \u5C06\u673A\u6784\u540D\u79F0\u62EC\u8D77\u6765\u3002
-solution.example.name.infunction=\u63D0\u793A\:\u628A\u540D\u5B57\u5199\u5165 (" ")\u4E2D.
-solution.example.node.infunction=\u63D0\u793A\: \u8BFE\u7A0B\u5143\u7D20ID\u5E94\u5199\u5728\u53CC\u5F15\u53F7\u4E2D,\u4E5F\u5C31\u662F {0}("12345").
-solution.provideone.areaname=\u63D0\u793A\: \u63D0\u4F9B\u4E00\u4E2A\u51C6\u786E\u7684\u5B66\u4E60\u533A\u57DF\u540D. \u800C\u4E14\u8BE5\u533A\u57DF\u5FC5\u987B\u5728\u7FA4\u7EC4\u7BA1\u7406\u4E2D\u5B58\u5728
-solution.provideone.date=\u63D0\u793A\: \u53CA\u65F6\u7684\u4E3A\u51FD\u6570"{0}"\u63D0\u4F9B\u4E00\u4E2A\u51C6\u786E\u65F6\u95F4. \u683C\u5F0F\u4E3A"dd.mm.YYYY HH\:mm".
-solution.provideone.groupname=\u63D0\u793A\: \u63D0\u4F9B\u4E00\u4E2A\u51C6\u786E\u7684\u7EC4\u540D .\u800C\u4E14\u8BE5\u7EC4\u540D\u5FC5\u987B\u5728\u7FA4\u7EC4\u7BA1\u7406\u4E2D\u5B58\u5728.
-solution.provideone.institutionalname=\u63D0\u793A\uFF1A\u8BF7\u63D0\u4F9B\u673A\u6784\u7684\u51C6\u786E\u540D\u79F0
-solution.provideone.nodereference=\u63D0\u793A\: \u7ED9\u51FD\u6570"{0}"\u63D0\u4F9B\u4E00\u4E2A\u51C6\u786E\u7684\u8BFE\u7A0B\u5143\u7D20ID 
-solution.provideone.username=\u63D0\u793A\: \u63D0\u4F9B\u4E00\u4E2A\u51C6\u786E\u7684\u7528\u6237\u540D, \u6CE8\u610F\u7CFB\u7EDF\u4F1A\u6838\u5BF9\u8BE5\u7528\u6237\u540D.
-solution.providetwo.attrvalue=\u63D0\u793A\: \u51FD\u6570{0} \u9700\u8981\u4E00\u4E2A\u5C5E\u6027\u540D\u548C\u5C5E\u6027\u503C ,  \u4E8C\u8005\u90FD\u5FC5\u987B\u5305\u542B\u5728" "\u4E2D.
-solution.takeassessablenode=\u63D0\u793A\: \u6838\u5BF9\u5E2E\u52A9\u4E00\u4E2A\u53EF\u8BBF\u95EE\u8BFE\u7A0B\u5143\u7D20\u7684\u5217\u8868.
+form.easy.group=\u9009\u62e9\u5b66\u4e60\u7ec4
+form.easy.groupSwitch=\u7fa4\u7ec4\u9650\u5b9a
+form.easy.nodePassed=\u8bfe\u7a0b\u5143\u7d20
+form.easy.nodePassed.deletedNode=\u8bfe\u7a0b\u5143\u7d20\u5df2\u5220\u9664, \u8bf7\u4fee\u6539.
+form.easy.nodePassed.noNodes=\u4e0d\u53ef\u884c, \u65e0\u8bfe\u7a0b\u5143\u7d20\u53ef\u4ee5\u8bbf\u95ee
+form.easy.nodePassed.select=\u8bf7\u9009\u62e9
+form.expert.condition=\u4e13\u5bb6\u89c4\u5219
+form.expert.error.condition=\u5206\u6790\u9519\u8bef, \u65e0\u6548\u7684\u5148\u51b3\u6761\u4ef6
+institution.attribute=\u5c5e\u6027
+institution.attributes.hint=\u8bf7\u68c0\u67e5\u8fd9\u4e9b\u5c5e\u6027\u662f\u5426\u5bf9\u60a8\u7684\u5927\u5b66\u6709\u6548\u3002
+mode=\u6a21\u5f0f
+mode.easy=\u7b80\u5355
+mode.expert=\u4e13\u5bb6
+popupchooseareas=\u4ece\u7fa4\u7ec4\u7ba1\u7406\u4e2d\u9009\u62e9\u5b66\u4e60\u533a\u57df
+popupchoosegroups=\u4ece\u7fa4\u7ec4\u7ba1\u7406\u4e2d\u9009\u62e9\u7ec4
+solution.checkgroupmanagement=\u63d0\u793a\: \u5728\u7ec4\u7ba1\u7406\u91cc\u9762\u521b\u5efa\u4e00\u4e2a\u7ec4.
+solution.chooseenrollment=\u63d0\u793a\: \u590d\u5236\u8be5"\u767b\u8bb0"\u8bfe\u7a0b\u5143\u7d20ID. \u5982\u679c\u4e0d\u5b58\u5728,\u8bf7\u6dfb\u52a0\u4e00\u4e2a.
+solution.copypastenodeid=\u63d0\u793a\: \u4ece\u5143\u7d20\u7684"\u8bf4\u660e"\u6807\u7b7e\u4e2d\u590d\u5236\u8bfe\u7a0b\u5143\u7d20ID.
+solution.error.inexpression=\u63d0\u793a\: \u68c0\u9a8c ( ) \u548c " "\u5f00/\u5173\u987a\u5e8f\u7684\u6b63\u786e\u6027 .
+solution.error.undefvariable=\u63d0\u793a\: \u68c0\u9a8c\u4f4d\u7f6e {0} \u4e0a\u7684\u5728" "\u4e2d\u7684\u53ef\u80fd\u53c2\u6570.
+solution.example.date.infunction=\u4f8b\u5982\: {0}("13.10.2005 18\:25")
+solution.example.institutionalname.infunction=\u63d0\u793a\uff1a\u8bf7\u7528\u53cc\u5f15\u53f7 " " \u5c06\u673a\u6784\u540d\u79f0\u62ec\u8d77\u6765\u3002
+solution.example.name.infunction=\u63d0\u793a\:\u628a\u540d\u5b57\u5199\u5165 (" ")\u4e2d.
+solution.example.node.infunction=\u63d0\u793a\: \u8bfe\u7a0b\u5143\u7d20ID\u5e94\u5199\u5728\u53cc\u5f15\u53f7\u4e2d,\u4e5f\u5c31\u662f {0}("12345").
+solution.provideone.areaname=\u63d0\u793a\: \u63d0\u4f9b\u4e00\u4e2a\u51c6\u786e\u7684\u5b66\u4e60\u533a\u57df\u540d. \u800c\u4e14\u8be5\u533a\u57df\u5fc5\u987b\u5728\u7fa4\u7ec4\u7ba1\u7406\u4e2d\u5b58\u5728
+solution.provideone.date=\u63d0\u793a\: \u53ca\u65f6\u7684\u4e3a\u51fd\u6570"{0}"\u63d0\u4f9b\u4e00\u4e2a\u51c6\u786e\u65f6\u95f4. \u683c\u5f0f\u4e3a"dd.mm.YYYY HH\:mm".
+solution.provideone.groupname=\u63d0\u793a\: \u63d0\u4f9b\u4e00\u4e2a\u51c6\u786e\u7684\u7ec4\u540d .\u800c\u4e14\u8be5\u7ec4\u540d\u5fc5\u987b\u5728\u7fa4\u7ec4\u7ba1\u7406\u4e2d\u5b58\u5728.
+solution.provideone.institutionalname=\u63d0\u793a\uff1a\u8bf7\u63d0\u4f9b\u673a\u6784\u7684\u51c6\u786e\u540d\u79f0
+solution.provideone.nodereference=\u63d0\u793a\: \u7ed9\u51fd\u6570"{0}"\u63d0\u4f9b\u4e00\u4e2a\u51c6\u786e\u7684\u8bfe\u7a0b\u5143\u7d20ID 
+solution.provideone.username=\u63d0\u793a\: \u63d0\u4f9b\u4e00\u4e2a\u51c6\u786e\u7684\u7528\u6237\u540d, \u6ce8\u610f\u7cfb\u7edf\u4f1a\u6838\u5bf9\u8be5\u7528\u6237\u540d.
+solution.providetwo.attrvalue=\u63d0\u793a\: \u51fd\u6570{0} \u9700\u8981\u4e00\u4e2a\u5c5e\u6027\u540d\u548c\u5c5e\u6027\u503c ,  \u4e8c\u8005\u90fd\u5fc5\u987b\u5305\u542b\u5728" "\u4e2d.
+solution.takeassessablenode=\u63d0\u793a\: \u6838\u5bf9\u5e2e\u52a9\u4e00\u4e2a\u53ef\u8bbf\u95ee\u8bfe\u7a0b\u5143\u7d20\u7684\u5217\u8868.
 xx={0}
