--- a/src/main/java/org/olat/ims/qti/statistics/ui/_i18n/LocalStrings_en.properties
+++ b/src/main/java/org/olat/ims/qti/statistics/ui/_i18n/LocalStrings_en.properties
@@ -5,7 +5,7 @@ answer.no=No
 answer.noanswer=no answer
 answer.points=({0} points)
 answer.yes=Yes
-chart.answer.averageScoreQuestions.y=Average score
+chart.answer.averageScoreQuestions.y=\u82f1\u6587\u5305Average score
 chart.answers=Answers
 chart.answerscount=Number of answers
 chart.averagescore.peritem=Average score per question
