--- a/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/modules/portfolio/ui/_i18n/LocalStrings_zh_CN.properties
@@ -1,43 +1,44 @@
 #Sun Mar 19 11:37:25 CET 2017
-access=\u8BBF\u95EE
-access.rights=\u589E\u52A0\u8BBF\u95EE\u6743\u9650
-access.rights.coach=\u8BC4\u5206
-access.rights.date=\u65E5\u671F
-access.rights.element=\u5143\u7D20
-access.rights.invitee=\u88AB\u9080\u8BF7\u8005
-access.rights.invitee.long=\u4F5C\u4E3A\u88AB\u9080\u8BF7\u8005\uFF08\u8BFB/\u8BC4\u8BBA\uFF09
-access.rights.owner.long=\u4F5C\u4E3A\u62E5\u6709\u8005\uFF08\u8BFB/\u5199\uFF09
-access.rights.reviewer=\u8BC4\u8BBA
-access.rights.reviewer.long=\u4F5C\u4E3A\u5BA1\u9605\u8005\uFF08\u9605\u8BFB/\u8BC4\u8BBA\uFF09
-action=\u52A8\u4F5C
-add.citation=\u6DFB\u52A0\u5F15\u7528
-add.file=\u589E\u52A0\u6587\u6863
-add.html=\u589E\u52A0HTML
-add.image=\u589E\u52A0\u56FE\u7247
-add.invitation=\u589E\u52A0\u9080\u8BF7
-add.media=\u589E\u52A0\u5143\u6587\u4EF6
-add.member=\u589E\u52A0\u6210\u5458
-add.text=\u589E\u52A0\u6587\u672C
-add.video=\u589E\u52A0\u89C6\u9891
-allow.delete.binder=\u5141\u8BB8\u7528\u6237\u5220\u9664\u7ED1\u5B9A
-allow.delete.binder.warning=\u4E0D\u5141\u8BB8\u7528\u6237\u5220\u9664\u7ED1\u5B9A
-artefact.bc=\u6587\u4EF6
-artefact.citation=\u5F15\u7528
-artefact.collect.date=\u65E5\u671F
-artefact.collect.link=\u94FE\u63A5
-artefact.descr=\u63CF\u8FF0
-artefact.file=\u6587\u4EF6
-artefact.image=\u56FE\u7247
-artefact.source=\u6E90
-artefact.text=\u6587\u672C
-artefact.video=\u89C6\u9891
+command.openassessment=\u8bc4\u4f30\u5de5\u5177
+access=\u8bbf\u95ee
+access.rights=\u589e\u52a0\u8bbf\u95ee\u6743\u9650
+access.rights.coach=\u8bc4\u5206
+access.rights.date=\u65e5\u671f
+access.rights.element=\u5143\u7d20
+access.rights.invitee=\u88ab\u9080\u8bf7\u8005
+access.rights.invitee.long=\u4f5c\u4e3a\u88ab\u9080\u8bf7\u8005\uff08\u8bfb/\u8bc4\u8bba\uff09
+access.rights.owner.long=\u4f5c\u4e3a\u62e5\u6709\u8005\uff08\u8bfb/\u5199\uff09
+access.rights.reviewer=\u8bc4\u8bba
+access.rights.reviewer.long=\u4f5c\u4e3a\u5ba1\u9605\u8005\uff08\u9605\u8bfb/\u8bc4\u8bba\uff09
+action=\u52a8\u4f5c
+add.citation=\u6dfb\u52a0\u5f15\u7528
+add.file=\u589e\u52a0\u6587\u6863
+add.html=\u589e\u52a0HTML
+add.image=\u589e\u52a0\u56fe\u7247
+add.invitation=\u589e\u52a0\u9080\u8bf7
+add.media=\u589e\u52a0\u5143\u6587\u4ef6
+add.member=\u589e\u52a0\u6210\u5458
+add.text=\u589e\u52a0\u6587\u672c
+add.video=\u589e\u52a0\u89c6\u9891
+allow.delete.binder=\u5141\u8bb8\u7528\u6237\u5220\u9664\u7ed1\u5b9a
+allow.delete.binder.warning=\u4e0d\u5141\u8bb8\u7528\u6237\u5220\u9664\u7ed1\u5b9a
+artefact.bc=\u6587\u4ef6
+artefact.citation=\u5f15\u7528
+artefact.collect.date=\u65e5\u671f
+artefact.collect.link=\u94fe\u63a5
+artefact.descr=\u63cf\u8ff0
+artefact.file=\u6587\u4ef6
+artefact.image=\u56fe\u7247
+artefact.source=\u6e90
+artefact.text=\u6587\u672c
+artefact.video=\u89c6\u9891
 assignment.document.upload=\u6587\u6863
-assignment.evaluation.form.reviewer.see.auto=\u88AB\u9080\u8BF7\u8005\u53EF\u4EE5\u770B\u5230\u81EA\u6211\u8BC4\u4F30
-assignment.type=\u7C7B\u578B
+assignment.evaluation.form.reviewer.see.auto=\u88ab\u9080\u8bf7\u8005\u53ef\u4ee5\u770b\u5230\u81ea\u6211\u8bc4\u4f30
+assignment.type=\u7c7b\u578b
 assignment.type.document=\u6587\u6863
-author=\u4F5C\u8005
-begin.date=\u5F00\u59CB
-binder.atleastone=\u81F3\u5C11\u9009\u62E9\u4E00\u4E2A\u7ED1\u5E26
-binder.last.update=\u6700\u540E\u66F4\u65B0
-binder.status=\u72B6\u6001
-binders=\u7ED1\u5B9A
+author=\u4f5c\u8005
+begin.date=\u5f00\u59cb
+binder.atleastone=\u81f3\u5c11\u9009\u62e9\u4e00\u4e2a\u7ed1\u5e26
+binder.last.update=\u6700\u540e\u66f4\u65b0
+binder.status=\u72b6\u6001
+binders=\u7ed1\u5b9a
