--- a/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/repository/_i18n/LocalStrings_zh_CN.properties
@@ -533,7 +533,8 @@ tab.public=\u901a\u7528
 tab.quota.edit=\u5b9a\u989d
 tab.sharedfolder=\u8d44\u6e90\u6587\u4ef6\u5939
 table.filter=\u8fc7\u6ee4
-table.header.ac=\u8bbf\u95ee Access
+new.form=\u65b0\u7a97\u53e3
+table.header.ac=\u8bbf\u95ee\u6743\u9650
 table.header.access=\u53ef\u8bbf\u95ee\u72b6\u6001*
 table.header.actions=<i class\='o_icon o_icon_actions o_icon-lg'> </i>
 table.header.author=\u521b\u5efa\u8005
