--- a/src/main/java/org/olat/resource/accesscontrol/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/resource/accesscontrol/ui/_i18n/LocalStrings_zh_CN.properties
@@ -5,7 +5,8 @@ accesscontrol.no.methods.full.access=\u6ca1\u6709\u9884\u5b9a\u65b9\u6cd5\u7528\
 accesscontrol.no.methods.no.access=\u6ca1\u6709\u914d\u7f6e\u4efb\u4f55\u9884\u8ba2\u65b9\u6cd5\u3002\u6b64\u8d44\u6e90\u53ea\u80fd\u7531\u6b64\u8d44\u6e90\u7684\u663e\u5f0f\u6210\u5458\u8bbf\u95ee\u3002\u9009\u62e9\u6309\u94ae "$\:add.accesscontrol" \u3002\u4ee5\u6dfb\u52a0\u9884\u8ba2\u65b9\u6cd5\u5e76\u53d1\u5e03\u8d44\u6e90\u3002
 add.accesscontrol=\u6dfb\u52a0\u9884\u8ba2\u65b9\u6cd5
 accesscontrol.token=\u63a5\u5165\u7801
-
+order.username=\u7528\u6237\u540d
+order.creationDate=\u521b\u5efa\u65e5\u671f
 
 order.menu.title=\u9884\u8ba2
 order.nr=\u9884\u8ba2\u53f7
