--- a/src/main/java/org/olat/ims/qti/statistics/ui/_i18n/LocalStrings_de.properties
+++ b/src/main/java/org/olat/ims/qti/statistics/ui/_i18n/LocalStrings_de.properties
@@ -5,11 +5,11 @@ answer.no=Nein
 answer.noanswer=keine Antwort
 answer.points=({0} Punkte)
 answer.yes=Ja
-chart.answer.averageScoreQuestions.y=Durchschnittliche Punkte
+chart.answer.averageScoreQuestions.y=\u5e73\u5747\u5206Durchschnittliche Punkte
 chart.answers=Antworten
 chart.answerscount=Anzahl Antworten
-chart.averagescore.peritem=Durchschnittliche Punkte pro Frage
-chart.cutscore=Notwendige Punktzahl f\u00FCr "Bestanden"
+chart.averagescore.peritem=\u6bcf\u9898\u5e73\u5747\u5206Durchschnittliche Punkte pro Frage
+chart.cutscore=Notwendige Punktzahl f\u00fcr "Bestanden"
 chart.duration=Bearbeitungs-Dauer in Sekunden
 chart.duration.histogramm=Bearbeitungsdauer
 chart.duration.histogramm.legend=Bearbeitungsdauer (Min.)
@@ -17,9 +17,9 @@ chart.gainedscoreabs={0} Teilnehmer haben {1} Punkte erreicht
 chart.gainedscorepercent={0} Teilnehmer haben {1}% der Punkte erreicht
 chart.item=Frage
 chart.maxscore=Maximale Punktzahl
-chart.msgb.sorrycontent=Es existieren zu wenig Daten f\u00FCr eine statistische Auswertung dieser Frage
+chart.msgb.sorrycontent=Es existieren zu wenig Daten f\u00fcr eine statistische Auswertung dieser Frage
 chart.msgb.sorrytitle=Entschuldigung
-chart.participants=Teilnehmer
+chart.participants=\u53c2\u4e0e\u8005Teilnehmer
 chart.participantspercentage=Teilnehmer in Prozent
 chart.percent=Prozent
 chart.percent.participants=% Teilnehmer
@@ -29,10 +29,10 @@ chart.questioncorrectansweredpercent={0} haben {1}% der Teilnehmer richtig beant
 chart.questionpointsscoredabs=In {0} wurden durchschnittlich {1} Punkte erreicht
 chart.questions=Fragen
 chart.responses=Antworten
-chart.rightanswers.peritem=Richtige Antworten pro Frage in Prozenten
-chart.sc.answeroptionchecked={0} Teilnehmer ({1}%) haben diese Anwortm\u00F6glichkeit gew\u00E4hlt
+chart.rightanswers.peritem=\u6bcf\u9898\u6b63\u786e\u7387Richtige Antworten pro Frage in Prozenten
+chart.sc.answeroptionchecked={0} Teilnehmer ({1}%) haben diese Anwortm\u00f6glichkeit gew\u00e4hlt
 chart.score.histogramm=Punkteverteilung
-chart.survey.overview=\u00DCbersicht
+chart.survey.overview=\u00dcbersicht
 chart.testfailed={0} Teilnehmer haben den Test nicht bestanden
 chart.testpassed={0} Teilnehmer haben den Test bestanden
 chart.tests=Anzahl Tests
@@ -42,25 +42,25 @@ chart.thisquestionwrongansweredpercent=Diese Frage wurde von {0}% der Teilnehmer
 chart.title.completiontime=Bearbeitungsdauer
 chart.title.ovpassedfailed=Bestanden / Nicht bestanden
 download.raw.data=Rohdaten herunterladen
-error.notfound.text=Das Test-Datei konnte nicht ge\u00F6ffnet werden und die Statistiken konnten nicht angezeigt werden.
-essay.warning.survey=Dieser Fragebogen enth\u00E4lt Essayfragen. Bitte navigieren Sie zu den entsprechenden Fragen zur Auswertung.
-essay.warning.test=Dieser Test enth\u00E4lt Essayfragen. Bitte navigieren Sie zu den entsprechenden Fragen zur Auswertung.
+error.notfound.text=Das Test-Datei konnte nicht ge\u00f6ffnet werden und die Statistiken konnten nicht angezeigt werden.
+essay.warning.survey=Dieser Fragebogen enth\u00e4lt Essayfragen. Bitte navigieren Sie zu den entsprechenden Fragen zur Auswertung.
+essay.warning.test=Dieser Test enth\u00e4lt Essayfragen. Bitte navigieren Sie zu den entsprechenden Fragen zur Auswertung.
 fib.answer=Liste der Antworten\: 
 fib.wrong.answer=Liste der falschen Antworten\: 
 fig.averagedur=Durchschnittliche Bearbeitungsdauer
 fig.averagescore=Durchschnittlich erreichte Punktzahl
 fig.avg=Mittelwert
 fig.correctanswers=Anzahl korrekter Antworten
-fig.courseId=Kurs-ID
-fig.failed=Nicht bestanden
+fig.courseId=\u8bfe\u7a0bIDKurs-ID
+fig.failed=\u672a\u901a\u8fc7Nicht bestanden
 fig.itemdiff=Itemschwierigkeit
-fig.median=Median
-fig.mode=Modalwert
+fig.median=\u4e2d\u503cMedian
+fig.mode=\u6a21\u5f0fModalwert
 fig.notanswered=Anzahl nicht beantwortet
 fig.participants=Teilnehmer
-fig.passed=Bestanden
-fig.span=Spannweite
-fig.stddev=Standardabweichung
+fig.passed=\u901a\u8fc7Bestanden
+fig.span=\u8303\u56f4Spannweite
+fig.stddev=\u6807\u51c6\u504f\u5deeStandardabweichung
 fig.surveyId=Fragebogen-ID
 fig.testId=Test-ID
 fig.title=Kennzahlen
@@ -69,9 +69,9 @@ menu.pull.tests.title=Tests einziehen
 menu.title=Test Statistiken
 print=Drucken
 retrievetest.confirm.text.plural=Wollen Sie wirklich die Tests von "{0}" einziehen?
-retrievetest.nothing.todo=Es gibt zurzeit kein Test dass Sie einziehen k\u00F6nnen.
+retrievetest.nothing.todo=Es gibt zurzeit kein Test dass Sie einziehen k\u00f6nnen.
 section=Sektion
-solution=Musterl\u00F6sung
-splash.choosetest=W\u00E4hlen Sie einen Test aus
-splash.notenoughresults=F\u00FCr diesen Test/Umfrage gibt es noch zu wenig Resultate ({0} Teilnehmer)
+solution=Musterl\u00f6sung
+splash.choosetest=W\u00e4hlen Sie einen Test aus
+splash.notenoughresults=F\u00fcr diesen Test/Umfrage gibt es noch zu wenig Resultate ({0} Teilnehmer)
 user.not.answer=Teilnehmer haben die Frage nicht beantwortet
