--- a/src/main/java/org/olat/course/member/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/course/member/_i18n/LocalStrings_zh_CN.properties
@@ -12,6 +12,7 @@ search.curriculum=\u4ec5\u9650\u8bfe\u7a0b\u6210\u5458only curriculum members
 
 menu.members=\u6210\u5458
 menu.orders=\u9884\u8ba2
+menu.orders.alt=\u9884\u5b9a\u7ba1\u7406
 menu.rights=\u6743\u5229
 menu.rights.alt=\u6743\u9650
 nomembers=\u6ca1\u6709\u627e\u5230\u4e0e\u60a8\u7684\u6807\u51c6\u5339\u914d\u7684\u6210\u5458\u3002
