--- a/src/main/java/org/olat/home/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/home/_i18n/LocalStrings_zh_CN.properties
@@ -45,3 +45,5 @@ warn.session.was.killed=\u76ee\u524d\u60a8\u6b63\u5728\u7528\u53e6\u4e00\u6d4f\u
 welcome.header=\u6b22\u8fce\u6765\u5230OpenOLAT\u4e16\u754c
 welcome.intro=OLAT--\u7b80\u4f53\u4e2d\u6587\u7248
 welcome.rss=\u9605\u8bfb\u60a8\u4e2a\u4eba\u7684RSS\u901a\u77e5
+menu.orders=\u9884\u5b9a
+menu.orders.alt=\u6211\u7684\u9884\u5b9a
