--- a/src/main/java/org/olat/instantMessaging/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/instantMessaging/ui/_i18n/LocalStrings_zh_CN.properties
@@ -1,7 +1,13 @@
 #Thu Sep 03 11:24:43 CEST 2015
-chat.load.history=\u663E\u793A\u804A\u5929\u8BB0\u5F55
-chat.not.available.now=\u804A\u5929\u5BA4\u76EE\u524D\u4E0D\u80FD\u4F7F\u7528\u3002\u8BF7\u60A8\u7A0D\u540E\u91CD\u8BD5\u3002
-chat.with.yourself=\u60A8\u771F\u8981\u60F3\u4E0E\u81EA\u5DF1\u4EA4\u8C08\uFF1F
+im.archive.delete=\u5728\u8fd9\u91cc\u60a8\u53ef\u4ee5\u5220\u9664\u804a\u5929\u8bb0\u5f55
+im.archive.export=\u5bfc\u51fa\u804a\u5929\u8bb0\u5f55
+im.archive.export.desc=\u5728\u8fd9\u91cc\u60a8\u53ef\u4ee5\u5bfc\u51fa\u804a\u5929\u5386\u53f2\u8bb0\u5f55
+IMArchiveController.menu.title=\u804a\u5929\u8bb0\u5f55
+IMArchiveController.menu.title.alt=\u804a\u5929\u8bb0\u5f55
+im.archive.title=$\:IMArchiveController.menu.title
+chat.load.history=\u663e\u793a\u804a\u5929\u8bb0\u5f55
+chat.not.available.now=\u804a\u5929\u5ba4\u76ee\u524d\u4e0d\u80fd\u4f7f\u7528\u3002\u8bf7\u60a8\u7a0d\u540e\u91cd\u8bd5\u3002
+chat.with.yourself=\u60a8\u771f\u8981\u60f3\u4e0e\u81ea\u5df1\u4ea4\u8c08\uff1f
 
 
 
@@ -30,75 +36,75 @@ chat.with.yourself=\u60A8\u771F\u8981\u60F3\u4E0E\u81EA\u5DF1\u4EA4\u8C08\uFF1F
 
 
 
-click.to.join=\u8FDB\u5165\u5B66\u7A0B\u804A\u5929\u5BA4...
-command.refresh=\u66F4\u65B0
-course.chat.click.to.join=\u5728\u6B64\u5B66\u7A0B\u804A\u5929\u5BA4\u4E2D\uFF0C\u60A8\u53EF\u4EE5\u5411\u5176\u4ED6\u7684\u5B66\u7A0B\u53C2\u4E0E\u8005\u53D1\u9001\u548C\u63A5\u53D7\u6D88\u606F\u3002
-course.chat.intro=\u5728\u8FD9\u91CC\u60A8\u53EF\u4EE5\u4E0E\u5176\u4ED6\u6B63\u5728\u7F16\u8F91\u6B64\u5B66\u7A0B\u7684\u4EBA\u8FDB\u884C\u4EA4\u8C08\u3002<br>\u60A8\u53EF\u4EE5\u533F\u540D\u767B\u9646\u4E5F\u53EF\u4F7F\u7528\u7528\u6237\u540D\u767B\u9646\u3002<br>\u5982\u679C\u60A8\u60F3\u79BB\u5F00\uFF0C\u53EA\u9700\u5173\u95ED\u60A8\u7684\u5B66\u7A0B\u3002
-course.groupchat=\u804A\u5929\u5BA4\:
-coursechat.not.available=\u5B66\u7A0B\u804A\u5929\u73B0\u5728\u65E0\u6CD5\u4F7F\u7528\u3002\u8BF7\u7A0D\u540E\u518D\u8BD5\u3002
-coursechat.not.available.short=\u804A\u5929\u529F\u80FD\u4E0D\u53EF\u7528\u3002
-form.defaultstatus=\u767B\u5F55\u9ED8\u8BA4\u72B6\u6001
-form.onlinelist=\u5176\u4ED6\u7528\u6237\u53EF\u4EE5\u770B\u89C1\u6211
-groupchat.new.msg=\u5B66\u7A0B\u804A\u5929\u5BA4\u6709\u65B0\u6D88\u606F\uFF01
-groupchat.not.available=\u804A\u5929\u529F\u80FD\u4E0D\u53EF\u7528\u3002
-groupchat.roster=\u53C2\u4E0E\u8005
-guestnoaccess.message=\u6E38\u5BA2\u65E0\u6CD5\u8BBF\u95EE\u804A\u5929\u5BA4 <p>\u8BF7\u5728OpenOLAT\u6CE8\u518C\u540E\u518D\u8FDB\u5165\u804A\u5929\u5BA4.
-guestnoaccess.title=\u6E38\u5BA2\u65E0\u6CD5\u8BBF\u95EE
+click.to.join=\u8fdb\u5165\u5b66\u7a0b\u804a\u5929\u5ba4...
+command.refresh=\u66f4\u65b0
+course.chat.click.to.join=\u5728\u6b64\u5b66\u7a0b\u804a\u5929\u5ba4\u4e2d\uff0c\u60a8\u53ef\u4ee5\u5411\u5176\u4ed6\u7684\u5b66\u7a0b\u53c2\u4e0e\u8005\u53d1\u9001\u548c\u63a5\u53d7\u6d88\u606f\u3002
+course.chat.intro=\u5728\u8fd9\u91cc\u60a8\u53ef\u4ee5\u4e0e\u5176\u4ed6\u6b63\u5728\u7f16\u8f91\u6b64\u5b66\u7a0b\u7684\u4eba\u8fdb\u884c\u4ea4\u8c08\u3002<br>\u60a8\u53ef\u4ee5\u533f\u540d\u767b\u9646\u4e5f\u53ef\u4f7f\u7528\u7528\u6237\u540d\u767b\u9646\u3002<br>\u5982\u679c\u60a8\u60f3\u79bb\u5f00\uff0c\u53ea\u9700\u5173\u95ed\u60a8\u7684\u5b66\u7a0b\u3002
+course.groupchat=\u804a\u5929\u5ba4\:
+coursechat.not.available=\u5b66\u7a0b\u804a\u5929\u73b0\u5728\u65e0\u6cd5\u4f7f\u7528\u3002\u8bf7\u7a0d\u540e\u518d\u8bd5\u3002
+coursechat.not.available.short=\u804a\u5929\u529f\u80fd\u4e0d\u53ef\u7528\u3002
+form.defaultstatus=\u767b\u5f55\u9ed8\u8ba4\u72b6\u6001
+form.onlinelist=\u5176\u4ed6\u7528\u6237\u53ef\u4ee5\u770b\u89c1\u6211
+groupchat.new.msg=\u5b66\u7a0b\u804a\u5929\u5ba4\u6709\u65b0\u6d88\u606f\uff01
+groupchat.not.available=\u804a\u5929\u529f\u80fd\u4e0d\u53ef\u7528\u3002
+groupchat.roster=\u53c2\u4e0e\u8005
+guestnoaccess.message=\u6e38\u5ba2\u65e0\u6cd5\u8bbf\u95ee\u804a\u5929\u5ba4 <p>\u8bf7\u5728OpenOLAT\u6ce8\u518c\u540e\u518d\u8fdb\u5165\u804a\u5929\u5ba4.
+guestnoaccess.title=\u6e38\u5ba2\u65e0\u6cd5\u8bbf\u95ee
 
 
-im.buddies=\u597D\u53CB
-im.buddies.online=\u8C01\u5728\u7EBF\uFF1F\u5F00\u59CB\u548C\u4ED6\u804A\u5929...
-im.chat=\u804A\u5929
-im.chat.disabled=\u804A\u5929\u529F\u80FD\u5173\u95ED\u3002\u5728\u8003\u8BD5\u671F\u95F4\uFF0C\u60A8\u65E0\u6CD5\u6536\u5230\u6D88\u606F\u3002
-im.chat.forbidden=\u6B64\u804A\u5929\u5BA4\u5DF2\u5173\u95ED\u3002\u8BF7\u7A0D\u540E\u518D\u8BD5\u3002
-im.chat.windows.may.invalid=\u6240\u6709\u6B63\u5728\u8FDB\u884C\u7684\u804A\u5929\u5C06\u7EC8\u6B62\uFF0C\u8BF7\u5173\u95ED\u804A\u5929\u7A97\u53E3\u3002
-im.chat.with=\u804A\u5929\u5BF9\u8C61
-im.client.start=\u5F00\u59CB\u7ED9\u5BA2\u6237\u53D1\u9001\u5373\u65F6\u6D88\u606F
-im.conference.maxi.intro=\u4F60\u53EF\u4EE5\u548C\u8BE5\u7EC4\u7684\u5176\u4ED6\u6210\u5458\u804A\u5929\u3002\u70B9\u51FB\u4E0B\u9762\u7684\u94FE\u63A5\u8FDB\u5165\u5F00\u59CB\u804A\u5929.
-im.conference.maxi.title=\u804A\u5929\u5BA4
-im.error.not.connected=\u670D\u52A1\u4E0D\u53EF\u7528
-im.hide.groups=\u9690\u85CF\u7EC4
-im.hide.offline.buddies=\u9690\u85CF\u79BB\u7EBF\u8054\u7CFB\u4EBA
-im.message=\u6D88\u606F
-im.message.answer=\u6D88\u606F
-im.message.answer.linktext=\u56DE\u590D
+im.buddies=\u597d\u53cb
+im.buddies.online=\u8c01\u5728\u7ebf\uff1f\u5f00\u59cb\u548c\u4ed6\u804a\u5929...
+im.chat=\u804a\u5929
+im.chat.disabled=\u804a\u5929\u529f\u80fd\u5173\u95ed\u3002\u5728\u8003\u8bd5\u671f\u95f4\uff0c\u60a8\u65e0\u6cd5\u6536\u5230\u6d88\u606f\u3002
+im.chat.forbidden=\u6b64\u804a\u5929\u5ba4\u5df2\u5173\u95ed\u3002\u8bf7\u7a0d\u540e\u518d\u8bd5\u3002
+im.chat.windows.may.invalid=\u6240\u6709\u6b63\u5728\u8fdb\u884c\u7684\u804a\u5929\u5c06\u7ec8\u6b62\uff0c\u8bf7\u5173\u95ed\u804a\u5929\u7a97\u53e3\u3002
+im.chat.with=\u804a\u5929\u5bf9\u8c61
+im.client.start=\u5f00\u59cb\u7ed9\u5ba2\u6237\u53d1\u9001\u5373\u65f6\u6d88\u606f
+im.conference.maxi.intro=\u4f60\u53ef\u4ee5\u548c\u8be5\u7ec4\u7684\u5176\u4ed6\u6210\u5458\u804a\u5929\u3002\u70b9\u51fb\u4e0b\u9762\u7684\u94fe\u63a5\u8fdb\u5165\u5f00\u59cb\u804a\u5929.
+im.conference.maxi.title=\u804a\u5929\u5ba4
+im.error.not.connected=\u670d\u52a1\u4e0d\u53ef\u7528
+im.hide.groups=\u9690\u85cf\u7ec4
+im.hide.offline.buddies=\u9690\u85cf\u79bb\u7ebf\u8054\u7cfb\u4eba
+im.message=\u6d88\u606f
+im.message.answer=\u6d88\u606f
+im.message.answer.linktext=\u56de\u590d
 im.message.delete=\u5220\u9664
-im.message.folowchat=\u5BF9\u4E8E\u5373\u65F6\u6D88\u606F\u5BA2\u6237\u7AEF
-im.message.folowchat.linktext=\u5F00\u59CB
-im.message.from=\u6D88\u606F\u6765\u81EA\:
-im.message.sendtime=\u53D1\u9001\u65F6\u95F4\:
+im.message.folowchat=\u5bf9\u4e8e\u5373\u65f6\u6d88\u606f\u5ba2\u6237\u7aef
+im.message.folowchat.linktext=\u5f00\u59cb
+im.message.from=\u6d88\u606f\u6765\u81ea\:
+im.message.sendtime=\u53d1\u9001\u65f6\u95f4\:
 im.message.subject=\u6807\u9898\:
-im.new.message=\u60A8\u83B7\u5F97{0}\u7684\u4E00\u6761\u65B0\u4FE1\u606F\u3002
-im.new.message.other=\u6765\u81EA\u53E6\u4E00\u4E2A\u4EBA\u7684\u65B0\u6D88\u606F\uFF1A<b>{0}</b>.\u6D88\u606F\uFF1A<b>{1}</b>.\u7EE7\u7EED\u4E0E{2}\u8FDB\u884C\u4EA4\u8C08\u3002
-im.new.message.short=\u65B0\u83B7\u5F97\u7684\u6D88\u606F...
-im.others.connected=OpenOLAT \u7528\u6237\u5728\u7EBF
-im.refresh=\u5237\u65B0\u663E\u793A
-im.refresh.auto=\u81EA\u52A8\u91CD\u65B0\u52A0\u8F7D\u663E\u793A\u3002
-im.roster.intro=\u8FD8\u6709\u8C01\u4ECE\u6211\u7684\u540C\u4E8B\u7EC4\u767B\u5F55\u5230OLAT\uFF1F \u8BF7\u9009\u62E9\u60A8\u8981\u4EA4\u8C08\u7684\u5BF9\u8C61\u3002
-im.show.groups=\u663E\u793A\u7EC4
-im.show.offline.buddies=\u663E\u793A\u79BB\u7EBF\u8054\u7CFB\u4EBA
-im.start.chat=\u5F00\u59CB\u8BA8\u8BBA...
-im.status=\u72B6\u6001\uFF1A
-im.status.change=\u8F6C\u6362\u72B6\u6001
-im.status.change.long=\u6539\u53D8\u5373\u65F6\u901A\u8BAF\u72B6\u6001
-im.status.msg=\u72B6\u6001msg\:
+im.new.message=\u60a8\u83b7\u5f97{0}\u7684\u4e00\u6761\u65b0\u4fe1\u606f\u3002
+im.new.message.other=\u6765\u81ea\u53e6\u4e00\u4e2a\u4eba\u7684\u65b0\u6d88\u606f\uff1a<b>{0}</b>.\u6d88\u606f\uff1a<b>{1}</b>.\u7ee7\u7eed\u4e0e{2}\u8fdb\u884c\u4ea4\u8c08\u3002
+im.new.message.short=\u65b0\u83b7\u5f97\u7684\u6d88\u606f...
+im.others.connected=OpenOLAT \u7528\u6237\u5728\u7ebf
+im.refresh=\u5237\u65b0\u663e\u793a
+im.refresh.auto=\u81ea\u52a8\u91cd\u65b0\u52a0\u8f7d\u663e\u793a\u3002
+im.roster.intro=\u8fd8\u6709\u8c01\u4ece\u6211\u7684\u540c\u4e8b\u7ec4\u767b\u5f55\u5230OLAT\uff1f \u8bf7\u9009\u62e9\u60a8\u8981\u4ea4\u8c08\u7684\u5bf9\u8c61\u3002
+im.show.groups=\u663e\u793a\u7ec4
+im.show.offline.buddies=\u663e\u793a\u79bb\u7ebf\u8054\u7cfb\u4eba
+im.start.chat=\u5f00\u59cb\u8ba8\u8bba...
+im.status=\u72b6\u6001\uff1a
+im.status.change=\u8f6c\u6362\u72b6\u6001
+im.status.change.long=\u6539\u53d8\u5373\u65f6\u901a\u8baf\u72b6\u6001
+im.status.msg=\u72b6\u6001msg\:
 im.today=1\u5929
-im.users.list=\u5F53\u524D\u767B\u5F55OpenOLAT\u7684\u6240\u6709\u7528\u6237\u540D\u5355
-im.users.list.unavailable=({0}\u4E2A\u7528\u6237\u4E0D\u53EF\u89C1)
-init.messaging=\u521D\u59CB\u5316
-logChat=\u804A\u5929\u8BB0\u5F55
-logChat.export.title=\u65E5\u5FD7
-msg.send=\u53D1\u9001
-msg.send.error=\u65E0\u6CD5\u53D1\u9001\u60A8\u7684\u4FE1\u606F\u3002\u8BF7\u91CD\u65B0\u8F7D\u5165\u6B64\u8BFE\u7A0B\u540E\u91CD\u8BD5\u3002
-new.status=\u65B0\u72B6\u6001\uFF1A
-nobody=\u65E0\u4EBA
-openChat=\u8FDB\u5165\u804A\u5929\u5BA4
-participants.in.chat=\u8FDB\u5165\u8BFE\u7A0B\u804A\u5929\u5BA4({0})
-presence.available=\u5728\u7EBF
-presence.dnd=\u8BF7\u52FF\u6253\u6270
-presence.unavailable=\u79BB\u7EBF
-refresh=\u5237\u65B0
-start.chat.with=\u5373\u5C06\u5F00\u59CB\u4E0E<b>{0}</b>\u4EA4\u8C08
-title.roster=\u804A\u5929\u548C\u8BFE\u7A0B\u901A\u77E5\u8BBE\u7F6E
-toogle.anonymous=\u663E\u793A\u6211\u7684\u771F\u6B63\u540D\u79F0\u5417\uFF1F
-update.roster=\u5347\u7EA7
+im.users.list=\u5f53\u524d\u767b\u5f55OpenOLAT\u7684\u6240\u6709\u7528\u6237\u540d\u5355
+im.users.list.unavailable=({0}\u4e2a\u7528\u6237\u4e0d\u53ef\u89c1)
+init.messaging=\u521d\u59cb\u5316
+logChat=\u804a\u5929\u8bb0\u5f55
+logChat.export.title=\u65e5\u5fd7
+msg.send=\u53d1\u9001
+msg.send.error=\u65e0\u6cd5\u53d1\u9001\u60a8\u7684\u4fe1\u606f\u3002\u8bf7\u91cd\u65b0\u8f7d\u5165\u6b64\u8bfe\u7a0b\u540e\u91cd\u8bd5\u3002
+new.status=\u65b0\u72b6\u6001\uff1a
+nobody=\u65e0\u4eba
+openChat=\u8fdb\u5165\u804a\u5929\u5ba4
+participants.in.chat=\u8fdb\u5165\u8bfe\u7a0b\u804a\u5929\u5ba4({0})
+presence.available=\u5728\u7ebf
+presence.dnd=\u8bf7\u52ff\u6253\u6270
+presence.unavailable=\u79bb\u7ebf
+refresh=\u5237\u65b0
+start.chat.with=\u5373\u5c06\u5f00\u59cb\u4e0e<b>{0}</b>\u4ea4\u8c08
+title.roster=\u804a\u5929\u548c\u8bfe\u7a0b\u901a\u77e5\u8bbe\u7f6e
+toogle.anonymous=\u663e\u793a\u6211\u7684\u771f\u6b63\u540d\u79f0\u5417\uff1f
+update.roster=\u5347\u7ea7
