--- a/src/main/java/org/olat/resource/accesscontrol/ui/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/resource/accesscontrol/ui/_i18n/LocalStrings_zh_CN.properties
@@ -1,13 +1,21 @@
 #Tue Sep 16 03:08:22 CEST 2014
+
+
 ac.methods.label=\u9884\u8ba2\u65b9\u6cd5
 
 accesscontrol.no.methods.full.access=\u6ca1\u6709\u9884\u5b9a\u65b9\u6cd5\u7528\u4e8e\u9650\u5236\u8bbf\u95ee\uff0c\u6240\u6709\u5df2\u77e5\u7528\u6237\u90fd\u53ef\u4ee5\u8bbf\u95ee\u6b64\u8d44\u6e90\uff0c\u800c\u65e0\u9700\u663e\u5f0f\u9884\u8ba2\u3002\u9009\u62e9\u6309\u94ae "$\:add.accesscontrol" \u6765 \u8bbf\u95ee\u63a7\u5236\u6765\u9650\u5236\u8bbf\u95ee\u6216\u8981\u6c42\u663e\u5f0f\u9884\u8ba2\u3002
 accesscontrol.no.methods.no.access=\u6ca1\u6709\u914d\u7f6e\u4efb\u4f55\u9884\u8ba2\u65b9\u6cd5\u3002\u6b64\u8d44\u6e90\u53ea\u80fd\u7531\u6b64\u8d44\u6e90\u7684\u663e\u5f0f\u6210\u5458\u8bbf\u95ee\u3002\u9009\u62e9\u6309\u94ae "$\:add.accesscontrol" \u3002\u4ee5\u6dfb\u52a0\u9884\u8ba2\u65b9\u6cd5\u5e76\u53d1\u5e03\u8d44\u6e90\u3002
 add.accesscontrol=\u6dfb\u52a0\u9884\u8ba2\u65b9\u6cd5
+menu.orders=\u9884\u5b9a
+menu.orders.alt=\u9884\u5b9a
 accesscontrol.token=\u63a5\u5165\u7801
 order.username=\u7528\u6237\u540d
 order.creationDate=\u521b\u5efa\u65e5\u671f
 
+
+
+order.menu.title.alt=\u9884\u5b9a
+segment.orders=
 order.menu.title=\u9884\u8ba2
 order.nr=\u9884\u8ba2\u53f7
 order.part.payment=\u9884\u8ba2\u65b9\u5f0f
