--- a/src/main/java/org/olat/admin/user/_i18n/LocalStrings_zh_CN.properties
+++ b/src/main/java/org/olat/admin/user/_i18n/LocalStrings_zh_CN.properties
@@ -1,6 +1,6 @@
 #Fri Mar 23 15:02:47 CET 2018
 new.form.organisations=\u7ec4\u7ec7
-
+view.access=\u9884\u5b9a
 table.identity.status=\u72b6\u6001
 table.header.vcard=\u540d\u7247
 poolsmanager=\u95ee\u9898\u6c60\u7ecf\u7406
